2003-12-12  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-message.c: removed debugging of the messages here.

2003-12-12  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-message.c (soup_soap_message_start_envelope):
	added information for SOAP-ENV namespace.

2003-12-10  Dan Winship  <danw@ximian.com>

	* libsoup/soup-message-client-io.c (parse_response_headers): if we
	receive an HTTP/1.0 response to an HTTP/1.1 request, downgrade the
	message's http_version so the keep-alive handling is correct.
	Fixes a problem noticed almost simultaneously by Rodrigo and Joe.

	* libsoup/soup-message.c (soup_message_restarted, etc): Add a
	"restarted" signal as suggested by Joe.

	* libsoup/soup-message-io.c (soup_message_io_finished): emit
	either "restarted" or "finished" as appropriate

	* libsoup/soup-session.c (soup_session_queue_message): Connect to
	"restarted" and run the queue if a message gets restarted

	* libsoup/soup-status.h: Remove a stray comma that gtk-doc doesn't
	like.

2003-12-10  Tambet Ingo  <tambet@ximian.com>

	* configure.in: Use autoconfig to check for socklen_t ...

	* libsoup/soup-address.c: ... and remove it from here ...

	* libsoup/soup-dns.c: ... and here.

2003-12-09  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-message.c (soup_soap_message_persist):
	(soup_soap_message_parse_response): print out request/response's
	contents, if in debug mode.

2003-12-07  JP Rosevear  <jpr@ximian.com>

	* configure.in: Bump version

2003-11-28  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]
	(soup_soap_parameter_get_first_child,
	soup_soap_parameter_get_first_child_by_name,
	soup_soap_parameter_get_next_child,
	soup_soap_parameter_get_next_child_by_name): new functions to
	manage SoupSoapParameter's children.
	(soup_soap_response_get_first_parameter): dont return a GList, but
	a SoupSoapParameter contained in the GList.

2003-11-26  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]