@@ -1,3 +1,9 @@
+2003-12-15  Dan Winship  <danw@ximian.com>
+
+	* libsoup/soup-socket.h (soup_socket_read, soup_socket_read_until,
+	soup_socket_write): s/guint/gsize/ to match the definitions in
+	soup-socket.c. #52167.
+
 2003-12-12  Rodrigo Moya <rodrigo@ximian.com>
 
 	* libsoup/soup-soap-message.c: removed debugging of the messages here.
